--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,38 +1,20 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
+<div class="navbar navbar-expand fixed-bottom justify-content-center component-gray" id="navbar-container" >
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <!-- Links -->
+  <ul class="navbar-nav row component-navbar-links" >
+    <li class="nav-item col" id="navbar-root-link">
+      <%= link_to root_path, class: "nav-link text-center navbar-tabs" do %><i class="fas fa-home"></i><% end %>
+    </li>
+    <li class="nav-item col" id="navbar-movies-link">
+      <%= link_to movies_path, class: "nav-link text-center navbar-tabs" do %><i class="fas fa-search"></i><% end %>
+    </li>
+    <li class="nav-item col" id="navbar-bookings-link">
+      <%= link_to bookings_path, class: "nav-link text-center navbar-tabs" do %><i class="fas fa-ticket-alt"></i><% end %>
+    </li>
+    <li class="nav-item col" id="navbar-profile-link">
+      <%= link_to profile_path, class: "nav-link text-center navbar-tabs" do %><i class="fas fa-user"></i><% end %>
+    </li>
+  </ul>
 
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Home", root_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Movies", movies_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Bookings", bookings_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Action", "#", class: "dropdown-item" %>
-            <%= link_to "Another action", "#", class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          </div>
-        </li>
-      <% else %>
-        <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        </li>
-      <% end %>
-    </ul>
-  </div>
 </div>
+
