--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<div class="container">
 <h2>Movies INDEX</h2>
 
  <div class="search-bar">
@@ -32,3 +33,4 @@
       <% end %>
     </div>
   </div>
+</div>
