--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,9 @@
-<%= render 'shared/navbar' %>
+
 <h1>Cinemapp</h1>
 <h2>Popular films</h2>
-<div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel" data-slide-to="1"></li>
-        <li data-target="#carousel" data-slide-to="2"></li>
-    </ol>
-    <!-- Carousel items -->
-    <div class="carousel-inner">
-        <div class="active item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-    </div>
-    <!-- Carousel nav -->
-    <a class="carousel-control left" href="#carousel" data-slide="prev">&lsaquo;</a>
-    <a class="carousel-control right" href="#carousel" data-slide="next">&rsaquo;</a>
+<div id="carousel">
+  <div><a href="https://www.google.com/"><img src="https://cdn.shopify.com/s/files/1/0598/2925/products/i5XKDHv.jpg?v=1556233439" height="300" width="200"></a></div>
+  <div><a href="https://www.whatever.com/"><img src="https://www.joblo.com/assets/images/joblo/posters/2019/08/joker-poster-main2.jpg" height="300" width="200"></a></div>
+  <div><a href="https://www.github.com/"><img src="https://images-na.ssl-images-amazon.com/images/I/51-LjrCfgkL.jpg" height="300" width="200"></a></div>
+  <div><a href="https://www.lewagon.com/"><img src="https://images-na.ssl-images-amazon.com/images/I/51Q7Psa2ufL.jpg" height="300" width="200"></a></div>
 </div>
