Login and signup forms. Alert and notice messages

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -22,4 +22,7 @@ $border-radius:    2px;
 $border-radius-lg: 2px;
 $border-radius-sm: 2px;
 
-// Override other variables below!
+// alert variables
+$alert-bg-level:     -10 !default;
+$alert-border-level:  -9 !default;
+$alert-color-level:    9 !default;
