--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,3 +1,2 @@
-<p id="notice"><%= notice %></p>
-
+         <%= link_to "Log out", destroy_user_session_path, :method => 'delete' %>
 <h2>Profile PAGE</h2>
