changed the gray - grey

--- a/app/assets/stylesheets/components/_dashboard-card.scss
+++ b/app/assets/stylesheets/components/_dashboard-card.scss
@@ -1,5 +1,6 @@
 .dashboard-card {
   background-size: cover;
+  background-color: $lightgrey;
   background-position: center;
   height: 180px;
   display: flex;
