--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,7 +13,7 @@
       padding-right:5px;
       align-self: center;
       a {
-        color: $darkgray;
+        color: $darkgrey;
         font-size: 24px;
         padding: 0px 0px 0px 0px;
         width: auto;
