Product card and grey and whit buttons

--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -1,1 +1,38 @@
+<div class="components-container" style="margin-bottom: 200px" >
 <h2 style="color:white">All the css components will be shown here</h2>
+
+
+
+<h3> Product Card</h3>
+  <div class="product-card">
+    <%= cl_image_tag("xj4rn787uwrfcxxkoim6",
+      crop: :fill, class: "product-image") %>
+    <div class="product-card-infos">
+      <p>ADDRESS</p>
+      <h2>Name of cinema</h2>
+      <p id="darker">City</p>
+    </div>
+  </div>
+
+
+
+<div style="margin:30px;">
+  <h3> Grey button</h3>
+
+  <div>
+  <a class="btn grey-button" href="#">Register</a>
+  </div>
+
+</div>
+
+
+<div style="margin:30px">
+  <h3> White button</h3>
+
+  <div>
+  <a class="btn white-button" href="#">Login</a>
+  </div>
+</div>
+
+
+</div>
