--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -3,3 +3,15 @@
 <div class="dashboard-card">
   Dashboard card
 </div>
+
+ <div class="home-movie-poster">
+  <a href="https://www.github.com/"><img src="https://i1.sndcdn.com/artworks-000592403786-dzqnmz-t500x500.jpg">
+  <div class="poster-content">
+    <div class="poster-content-text">
+      <h5>29/11, 17h</h5>
+      <h2>The Matrix</h2>
+      <h3><i class="fas fa-tags"></i> <span class="original-price">110dkk</span> | 80dkk</h3>
+    </div>
+  </a>
+  </div>
+</div>
