--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,23 @@
 <h1>Cinemapp</h1>
 <h2>Popular films</h2>
 <div id="carousel">
-  <div><a href="https://www.google.com/"><img src="https://cdn.shopify.com/s/files/1/0598/2925/products/i5XKDHv.jpg?v=1556233439" height="300" width="200"></a></div>
-  <div><a href="https://www.whatever.com/"><img src="https://www.joblo.com/assets/images/joblo/posters/2019/08/joker-poster-main2.jpg" height="300" width="200"></a></div>
-  <div><a href="https://www.github.com/"><img src="https://images-na.ssl-images-amazon.com/images/I/51-LjrCfgkL.jpg" height="300" width="200"></a></div>
-  <div><a href="https://www.lewagon.com/"><img src="https://images-na.ssl-images-amazon.com/images/I/51Q7Psa2ufL.jpg" height="300" width="200"></a></div>
+
+  <div class="home-movie-poster">
+    <a href="https://www.github.com/"><img src="https://i1.sndcdn.com/artworks-000592403786-dzqnmz-t500x500.jpg">
+    <div class="poster-content">
+      <div class="poster-content-text">
+        <h5>29/11, 17h</h5>
+        <h2>The Matrix</h2>
+        <h3><i class="fas fa-tags"></i> <span class="original-price">110dkk</span> | 80dkk</h3>
+      </div>
+    </a>
+    </div>
+  </div>
+
 </div>
+
+
+
+
+
+
