movie index card

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,4 +5,5 @@
 @import "myforms";
 @import "product-card";
 @import "grey-button";
-@import "white-button"
+@import "white-button";
+@import "movie-index-card"
