--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -34,3 +34,11 @@
   </div>
 </div>
 </div>
+
+<h3>Movie Index Card</h3>
+ <div class="movie-card-box">
+      <% @movies.each do |movie| %>
+      <!-- this image will be a movie.image linked to movie show path -->
+          <img class="movie-card-img" src="https://www.joblo.com/assets/images/joblo/posters/2019/08/joker-poster-main2.jpg">
+      <% end %>
+  </div>
