--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -1,5 +1,34 @@
 <h2 style="color:white">All the css components will be shown here</h2>
 
 <div class="dashboard-card">
-  Dashboard card
+  <div class="card-body">
+    <p class="date-time">DATE, TIME</p>
+    <h4 class="movie-title">Movie title</h4>
+    <h6 class='price'>price</h6>
+  </div>
 </div>
+<br>
+<%= image_tag "https://kitt.lewagon.com/placeholder/users/sarahlafer", class: "avatar-bordered", alt: "avatar-bordered" %>
+
+
+
+
+
+
+
+
+<!-- <div class="component-container">
+  <div class="dashboard-card p-3 mb-3">
+    <h2>Movie title</h2>
+    <p><small>date, time</small></p>
+    <p><small>number</small></p>
+
+  </div>
+</div> -->
+
+<!-- <div class="card p-3 mb-3">
+   <p><strong>Margherita</strong></p>
+            <p><small>Tomato, basil, mozzarella</small></p>
+            <span>£5.95</span>
+          </div>
+ -->
