--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,12 @@
+<div class="login-container">
+  <div class="row">
+    <div class="col-12 col-lg-4 offset-lg-4">
+        <div>
+          <%= link_to root_path do %>
+            <i class="fas fa-arrow-left"></i>
+          <% end %>
+      </div>
+      <div class="form-login">
 <h2>Forgot your password?</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
@@ -11,8 +20,12 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+    <%= f.button :submit, "Send me reset password instructions", class: "btn grey-button" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+ </div>
+    </div>
+  </div>
+</div>
