--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -1,6 +1,32 @@
 <div class="components-container" style="margin-bottom: 200px" >
   <h2 style="color:white">All the css components will be shown here</h2>
 
+
+
+
+<h3 style="margin:100px"> Book card</h3>
+  <div class="book-card">
+    <div class="card-info">
+      <p class="amount_tickets">2 tickets</p>
+      <span id="price">240 kr</span>
+    </div>
+    <div class="button-area">
+      <a class="btn red-button" href="#">Book</a>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+  <h3 style="margin:100px"> Dashboard card</h3>
   <div class="dashboard-card">
     <div class="card-body">
       <p class="date-time">DATE, TIME</p>
@@ -9,7 +35,7 @@
     </div>
   </div>
 
-    <h3> Product Card</h3>
+    <h3 style="margin:100px"> Product Card</h3>
     <div class="product-card">
       <%= cl_image_tag("xj4rn787uwrfcxxkoim6",
         crop: :fill, class: "product-image") %>
@@ -33,7 +59,15 @@
         <a class="btn white-button" href="#">Login</a>
       </div>
     </div>
-  </div>
+
+
+  <div style="margin:30px">
+      <h3> red button</h3>
+      <div>
+        <a class="btn red-button" href="#">Book</a>
+      </div>
+    </div>
+
 
   <%= image_tag "https://kitt.lewagon.com/placeholder/users/sarahlafer", class: "avatar-bordered", alt: "avatar-bordered" %>
 
@@ -57,7 +91,7 @@
       <img class="movie-card-img" src="https://www.joblo.com/assets/images/joblo/posters/2019/08/joker-poster-main2.jpg">
     <% end %>
   </div>
-</div>
+
 
 <h3>Search bar</h3>
 <div class="text-center">
@@ -77,4 +111,5 @@
       <% end %>
    </div>
   </div>
+</div>
 </div>
