--- a/app/assets/stylesheets/components/_movie-index-card.scss
+++ b/app/assets/stylesheets/components/_movie-index-card.scss
@@ -10,21 +10,25 @@
   padding: 3px;
 }
 
-.movie-card-img {
+.movie-card img {
+  display: block;
   border-radius: 12px;
   margin: 3px;
-  height: 100%;
-  width: 47%;
+  width: 100%;
+  height: 97%;
   object-fit: cover;
   box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
 }
+.movie-card {
+  width: 47%;
+}
 @include media-breakpoint-up(sm) {
-  .movie-card-img {
+  .movie-card{
     width: 31%;
   }
 }
 @include media-breakpoint-up(xl) {
-  .movie-card-img {
+  .movie-card{
     width: 24%;
   }
 }
