--- a/app/assets/stylesheets/pages/_movies-index.scss
+++ b/app/assets/stylesheets/pages/_movies-index.scss
@@ -1,6 +1,22 @@
 .browse-title {
-  font-size: 12px;
+  font-size: 14px;
   color: white;
   text-transform: uppercase;
-  margin-bottom: -1px;
+}
+
+.browse-link {
+  font-size: 14px;
+  color: $red;
+  text-transform: uppercase;
+}
+
+.menu-container {
+  width: 100%;
+  display: flex;
+  height: 30px;
+  justify-content: space-between;
+}
+
+.movie-index {
+  margin-bottom: 100px;
 }
