--- a/app/assets/stylesheets/components/_product-card.scss
+++ b/app/assets/stylesheets/components/_product-card.scss
@@ -1,18 +1,16 @@
 .product-card {
   font-family: Work Sans;
-  font-weight: 600;
-  margin-top: 80px;
-  margin-left: 20px;
-  padding:20px;
-  overflow: hidden;
-  height: 120px;
-  width:80%;
-  background: transparent;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: stretch;
+
+  .cinema {
+    padding-bottom: 5px;
+    padding-left: 15px;
+  }
 
   img {
-  height: 100%;
+  height: 80px;
   width: 100px;
   object-fit: cover;
   border-radius: 12px;
@@ -23,10 +21,19 @@
   font-family: Work Sans;
   font-size: 16px;
   font-weight: 600;
-  margin: 0;
+  margin-bottom: 5px;
   color:$lightergrey;
   // margin-bottom:5px;
   line-height:1;
+  }
+
+  h3 {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.4;
+    margin-bottom: 0;
+    // margin-top: 8px;
+    color:$lightergrey;
   }
 
   p {
@@ -54,8 +61,9 @@
     flex-direction: column;
     justify-content: space-between;
     font-weight: 600;
+    max-width: 70%;
     // line-height: 1.5em;
     height:100%;
-  padding-left: 16px;
+  padding-left: 10px;
   }
 }
