--- a/app/assets/stylesheets/components/_dashboard-card.scss
+++ b/app/assets/stylesheets/components/_dashboard-card.scss
@@ -13,7 +13,7 @@
   font-size: 24px;
   font-weight: bold;
   border-radius: 12px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 10px 10px -9px black;
 }
 
 .card-date-time {
