--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -1,6 +1,20 @@
-<div class="components-container" style="margin-bottom: 200px" >
+<div class="components-container" style="margin-bottom: 300px" >
   <h2 style="color:white">All the css components will be shown here</h2>
 
+    <h3> Map Card</h3>
+  <div class="map-container">
+    <div class="map-card">
+      <%= cl_image_tag("xj4rn787uwrfcxxkoim6",
+        crop: :fill, class: "map-image") %>
+      <div class="map-card-infos">
+        <p id="map-card-darker">Date, time</p>
+        <h2 id="map-card-red">Name of cinema</h2>
+        <p id="map-card-white">City, address</p>
+      </div>
+    </div>
+  </div>
+
+  <h3> Dashboard Card</h3>
   <div class="dashboard-card">
     <div class="card-body">
       <p class="date-time">DATE, TIME</p>
@@ -78,3 +92,4 @@
    </div>
   </div>
 </div>
+<br>
