quick fixes after implementation

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,8 +8,8 @@
     <li class="nav-item col" id="navbar-movies-link">
       <%= link_to movies_path, class: "nav-link text-center navbar-tabs" do %><i class="fas fa-search"></i><% end %>
     </li>
-    <li class="nav-item col" id="navbar-bookings-link">
-      <%= link_to bookings_path, class: "nav-link text-center navbar-tabs" do %><i class="fas fa-ticket-alt"></i><% end %>
+    <li class="nav-item col" id="navbar-dashboard-link">
+      <%= link_to dashboard_path, class: "nav-link text-center navbar-tabs" do %><i class="fas fa-ticket-alt"></i><% end %>
     </li>
     <li class="nav-item col" id="navbar-profile-link">
       <%= link_to profile_path, class: "nav-link text-center navbar-tabs" do %><i class="fas fa-user"></i><% end %>
