--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,7 +1,6 @@
 <h2><%= @movie.name %></h2>
 <p><%= @movie.description %></p>
-<%= cl_image_tag(@movie.image,
-      width: 400, height: 300, crop: :fill) %>
+<%= cl_image_tag(@movie.image, width: 400, height: 300, crop: :fill) %>
 
 <%= link_to "See Sessions", movie_sessions_path(@movie), class: "btn btn-primary" %>
 <p></p>
