--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -47,10 +47,18 @@
     <div class="dashcard-body">
       <p class="date-time">DATE, TIME</p>
       <h4 class="movie-title">Movie title</h4>
-      <h6 class='price'>price</h6>
+      <div class="tickets-price-info">
+        <div class="tickets-info">
+          <i class="fas fa-ticket-alt dashicons"></i>
+          <h6 class="price">3</h6>
+        </div>
+        <div class="price-info">
+          <i class="fas fa-money-bill-alt dashicons"></i>
+          <h6 class="price">80kr</h6>
+        </div>
+      </div>
     </div>
   </div>
-
     <h3 style="margin:100px"> Product Card</h3>
     <div class="product-card">
       <%= cl_image_tag("xj4rn787uwrfcxxkoim6",
