Advances in dashboard card and dashboard view. Created a method within the session model to get the final_price (discounted) depending on how many seats are there available at the time of booking, amount of hours left for the movie to start, if it is weekend or not, initial price, maximum discount accepted for the session, and the minimum percentage of empty seats for which the final price will be the lowest one accepted for the session. FOr this I needed to add columns to our session table and change the session model itself

--- a/app/assets/stylesheets/components/_dashboard-card.scss
+++ b/app/assets/stylesheets/components/_dashboard-card.scss
@@ -1,7 +1,8 @@
 
 .dashboard-card {
-  width:100%;
-  margin: 20px;
+  width:95%;
+  margin-top:10px;
+  margin-left: 20px;
   background-color: $lightgrey;
   display: flex;
   flex-direction: row;
