Dashboard view and card

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -41,11 +41,15 @@
         font-size:28;
         margin:0;
       }
+    }
+
+  }
+}
       .link-dash{
         margin:auto 0;
-        // color:#41D3BD;       //turquoise
+        color:#41D3BD;       //turquoise
         // color:#8fbf00;       //green
-        color:#00ffff;          //vibrant turqoise
+        // color:#00ffff;          //vibrant turqoise
         // color:#00ffb2;          //light green
         // color:#00ff72;
         // color:#52d1dc;          //dark turoqiuse
@@ -53,7 +57,3 @@
         font-family: Work Sans;
         font-size: 20px;
       }
-    }
-
-  }
-}
