--- a/app/assets/stylesheets/components/_dashboard-card.scss
+++ b/app/assets/stylesheets/components/_dashboard-card.scss
@@ -1,8 +1,10 @@
 
 .dashboard-card {
+  z-index:0;
+  position:relative;
   width:95%;
   margin-top:10px;
-  margin-left: 20px;
+  margin-left: 10px;
   background-color: $lightgrey;
   display: flex;
   flex-direction: row;
@@ -13,6 +15,10 @@
   border-radius: 12px;
   box-shadow: 0 10px 10px -9px black;
   padding: 20px;
+}
+
+.dashcard-body{
+  z-index:2;
 }
 
 .card-date-time {
@@ -43,9 +49,11 @@ h6 {
 }
 
 .date-time {
+  margin-left: 20px;
   font-family: Work Sans;
   font-weight: 600;
-  font-size: 12px;
+  font-size: 18px;
+  text-decoration: overline;
 }
 
 .tickets-price-info{
@@ -53,6 +61,7 @@ h6 {
       margin-top: 5px;
       font-size: 20px;
       margin-right:5px;
+      color: white;
     }
       display:flex;
       .tickets-info{
@@ -63,19 +72,107 @@ h6 {
         display:flex;
       }
     }
-// li {
-//   list-style-type: none;
-//   margin-right: 5px;
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: flex-end;
-//   align: center;
-// }
 
-// ul {
-//   padding-left: 0px;
-//   font-family: Work Sans;
-//   font-weight: 600;
-//   font-size: 12px;
-//   margin-bottom: 5px;
+.QR {
+    position: relative;
+    z-index: 2;
+    top: -7px;
+    right: -9px;
+    width: 28%;
+}
+
+  // .ticketback {
+  //   position:absolute;
+  //   z-index:1;
+  //   top:-174px;
+  //   left:-152px;
+  //   width:190%;
+  // }
+
+.ticketback {
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    left: -2px;
+    width: 101%;
+    height: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .dashboard-history-card {
+// // position:relative;
+//   z-index:0;
+//   // background-image: url(ticket.png);
+//   // background-position: center;
+//   // background-size: 100%;
+//   // background-repeat: no-repeat;
+//   width:95%;
+//   height: 166px;
+//   margin:auto;
+//   // margin-top:10px;
+//   // margin-left: 20px;
+//   background-color: $lightgrey;
+//   // display: flex;
+//   // flex-direction: row;
+//   // align-items: center;
+//   // color: white;
+//   // font-size: 24px;
+//   // font-weight: bold;
+//   border-radius: 12px;
+//   box-shadow: 0 10px 10px -9px black;
+//   // padding: 20px;
+
+//   // .dashcard-body{
+//   // position:absolute;
+//   //   z-index:2;
+
+
+//   // }
+// //   .ticketimage{
+// //       position:absolute;
+
+// //     z-index:1;
+// //     position:relative;
+// //     top:-150px;
+// //     left: -115px;
+// //     width:170%;
+
+
+// // // ticketimage {
+// // //     position: relative;
+// // //     top: -155px;
+// // //     left: -128px;
+// // //     width: 176%;
+// // //     z-index: 0;
+// // // }
+// //   }
 // }
