--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -13,7 +13,7 @@ $font-size-base: 1rem;
 $body-color: $grey;
 $primary:    $red;
 $success:    $green;
-$info:       $yellow;
+$info:       $turquoise;
 $danger:     $red;
 $warning:    $orange;
 
