--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,2 +1,2 @@
-<%= link_to "Log out", destroy_user_session_path, :method => 'delete' %>
+<%= link_to "Log out", destroy_user_session_path, :method => 'delete', class: "link-dash" %>
 <h2>Profile PAGE</h2>
