--- a/app/assets/stylesheets/components/_product-card.scss
+++ b/app/assets/stylesheets/components/_product-card.scss
@@ -46,23 +46,21 @@
   margin-bottom: 0;
   // margin-top: 8px;
   color:$lightergrey;
-
   }
 
-#darker {
-  color:$lightgrey;
-  font-size:12px;
-  font-weight: 600;
+  #darker {
+    color:$lightgrey;
+    font-size:12px;
+    font-weight: 600;
+  }
 
-
-}
   .product-card-infos {
     padding-left: 10px;
     padding-top: 6px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 70%;
+    width: 65%;
     height: 100%;
   }
 }
