--- a/app/assets/stylesheets/components/_product-card.scss
+++ b/app/assets/stylesheets/components/_product-card.scss
@@ -5,9 +5,10 @@
   align-items: stretch;
 
   .cinema {
-    padding-bottom: 5px;
+    margin-bottom: 5px;
     padding-left: 15px;
     justify-content: flex-start;
+    height: 100px;
   }
 
   img {
