--- a/app/views/cinemas/show.html.erb
+++ b/app/views/cinemas/show.html.erb
@@ -22,5 +22,5 @@
 
 <div style="height:10px"></div>
 
-<%#= link_to "Go back to movie", movie_path(@movie), class: "btn grey-button" %>
+<%= link_to "Go back to cinemas", cinemas_path, class: "btn grey-button" %>
 </div>
