--- a/app/assets/stylesheets/components/_home-movie-card.scss
+++ b/app/assets/stylesheets/components/_home-movie-card.scss
@@ -1,7 +1,8 @@
 
 .home-movie-poster img {
+  padding-bottom: 15px;
   width: 100%;
-  height: auto;
+  height: 200px;
   border-radius: 12px;
   box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -11,9 +12,8 @@
   text-align: left;
   border-radius: 12px;
   width: 100%;
-  height: auto;
+  height: 300px;
   padding: 0 10px;
-
 }
 
 .poster-content {
@@ -23,7 +23,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 40%;
+  height: 45%;
   background: rgb(178,45,12);
   background: -moz-linear-gradient(0deg, rgba(178,45,12,1) 22%, rgba(178,45,12,1) 44%, rgba(178,45,12,0.7413340336134453) 64%, rgba(178,45,12,0.6516981792717087) 80%, rgba(178,45,12,0) 100%);
   background: -webkit-linear-gradient(0deg, rgba(178,45,12,1) 22%, rgba(178,45,12,1) 44%, rgba(178,45,12,0.7413340336134453) 64%, rgba(178,45,12,0.6516981792717087) 80%, rgba(178,45,12,0) 100%);
@@ -31,7 +31,8 @@
 }
 
 .poster-content-text {
-  padding: 20px 10px;
+  margin-top: 30px;
+  margin-left: 10px;
 }
 
 .poster-content-text h5 {
@@ -41,8 +42,8 @@
 
 .poster-content-text h2 {
   color: white;
-  font-size: 20px;
-  font-weight: bold;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .poster-content-text h3 {
