--- a/app/assets/stylesheets/components/_product-card.scss
+++ b/app/assets/stylesheets/components/_product-card.scss
@@ -60,8 +60,13 @@
     padding-top: 6px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
     width: 65%;
     height: 100%;
+
+    .cinema-links {
+      display: flex;
+      margin: unset;
+    }
   }
 }
