--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,24 +1,29 @@
-
-<h1>Cinemapp</h1>
-<h2>Popular films</h2>
-<div id="carousel">
-
-  <div class="home-movie-poster">
-    <a href="https://www.github.com/"><img src="https://i1.sndcdn.com/artworks-000592403786-dzqnmz-t500x500.jpg">
-    <div class="poster-content">
-      <div class="poster-content-text">
-        <h5>29/11, 17h</h5>
-        <h2>The Matrix</h2>
-        <h3><i class="fas fa-tags"></i> <span class="original-price">110dkk</span> | 80dkk</h3>
-      </div>
-    </a>
-    </div>
+<div class="container home">
+  <div class="logo-home">
+    <%= image_tag("cinemapp_logo.png", class: "logo") %>
   </div>
 
+  <div class="films">
+    <h2>Popular films</h2>
+    <div id="carousel">
+      <% @movies.each do |movie| %>
+        <div class="home-movie-poster">
+          <%= link_to movie_sessions_path(movie), class: 'movie-card' do %>
+             <%= cl_image_tag movie.image %>
+          <% end %>
+          <div class="discount-highlight">
+
+          </div>
+            <div class="poster-content">
+              <div class="poster-content-text">
+                <h2><%= movie.name %></h2>
+                <h3>Next session:</h3>
+                <h5><%= movie.sessions.first&.showtime&.strftime("%d/%m %I:%M%p") %></h5>
+                <h3><i class="fas fa-tags"></i> <span class="original-price"><%= @sessions.first&.base_price %> kr</span> | <%= @sessions.first&.current_discounted_price %> kr </h3>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
-
-
-
-
-
-
