--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,3 +1,14 @@
+.fa-arrow-left {
+  position:absolute;
+  // margin-top:40px;
+  color: white;
+  // padding-left:20px;
+  font-size:24px;
+  top:20px;
+  margin:0;
+}
+
+
 .mapboxgl-popup {
   max-width: 200px;
 }
