--- a/app/views/cinemas/index.html.erb
+++ b/app/views/cinemas/index.html.erb
@@ -45,7 +45,7 @@
               <% end %>
             </div>
             <div>
-              <%= link_to movies_path, class: 'browse-link' do %>
+              <%= link_to cinema_map_path(cinema), class: 'browse-link' do %>
                 <i class="fas fa-map-marker-alt"></i> Map
               <% end %>
              </div>
