--- a/app/assets/stylesheets/components/_home-cinema-card.scss
+++ b/app/assets/stylesheets/components/_home-cinema-card.scss
@@ -1,1 +1,51 @@
-_home-cinema-card.scss
+.home-cinema-card {
+  position: relative;
+  text-align: left;
+  border-radius: 12px;
+  width: 100%;
+  padding: 0 10px;
+
+  img {
+    width: 100%;
+    height: 200px;
+    border-radius: 12px;
+    object-fit: cover;
+    box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  .cinema-info {
+  margin: 0 10px;
+  position: absolute;
+  border-radius: 12px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 45%;
+  background: rgb(178,45,12);
+  background: -moz-linear-gradient(0deg, rgba(178,45,12,1) 22%, rgba(178,45,12,1) 44%, rgba(178,45,12,0.7413340336134453) 64%, rgba(178,45,12,0.6516981792717087) 80%, rgba(178,45,12,0) 100%);
+  background: -webkit-linear-gradient(0deg, rgba(178,45,12,1) 22%, rgba(178,45,12,1) 44%, rgba(178,45,12,0.7413340336134453) 64%, rgba(178,45,12,0.6516981792717087) 80%, rgba(178,45,12,0) 100%);
+  background: linear-gradient(0deg, rgba(178,45,12,1) 22%, rgba(178,45,12,1) 44%, rgba(178,45,12,0.7413340336134453) 64%, rgba(178,45,12,0.6516981792717087) 80%, rgba(178,45,12,0) 100%);
+
+  // background: rgb(66,66,66);
+  // background: -moz-linear-gradient(0deg, rgba(66,66,66,0.9794292717086834) 0%, rgba(66,66,66,0.9682247899159664) 41%, rgba(66,66,66,0.788953081232493) 64%, rgba(66,66,66,0.46682422969187676) 84%, rgba(66,66,66,0) 100%);
+  // background: -webkit-linear-gradient(0deg, rgba(66,66,66,0.9794292717086834) 0%, rgba(66,66,66,0.9682247899159664) 41%, rgba(66,66,66,0.788953081232493) 64%, rgba(66,66,66,0.46682422969187676) 84%, rgba(66,66,66,0) 100%);
+  // background: linear-gradient(0deg, rgba(66,66,66,0.9794292717086834) 0%, rgba(66,66,66,0.9682247899159664) 41%, rgba(66,66,66,0.788953081232493) 64%, rgba(66,66,66,0.46682422969187676) 84%, rgba(66,66,66,0) 100%);
+    .cinema-info-text {
+      margin-top: 20px;
+      margin-left: 10px;
+      h5 {
+      color: white;
+      font-size: 12px;
+      }
+      h2 {
+      color: white;
+      font-size: 18px;
+      font-weight: 600;
+      }
+      h3 {
+      color: white;
+      font-size: 14px;
+      opacity: 0.8;
+      }
+    }
+  }
+}
