--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,7 @@
 @import "myforms";
 @import "search-bar";
 @import "home-movie-card";
+@import "home-cinema-card";
 @import "product-card";
 @import "grey-button";
 @import "white-button";
