--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,25 +5,45 @@
 
   <div class="films">
     <h2>Popular films</h2>
-    <div id="carousel">
+    <div id="film-carousel">
       <% @movies.each do |movie| %>
         <div class="home-movie-poster">
           <%= link_to movie_sessions_path(movie), class: 'movie-card' do %>
              <%= cl_image_tag movie.image %>
           <% end %>
           <div class="discount-highlight">
-
+            <h2 class="discount"><%= @sessions.first&.current_discounted_price.second.to_i %>% off</h2>
           </div>
             <div class="poster-content">
               <div class="poster-content-text">
                 <h2><%= movie.name %></h2>
-                <h3>Next session:</h3>
+                <h5><%= movie.sessions.first&.room&.cinema&.name %></h5>
                 <h5><%= movie.sessions.first&.showtime&.strftime("%d/%m %I:%M%p") %></h5>
-                <h3><i class="fas fa-tags"></i> <span class="original-price"><%= @sessions.first&.base_price %> kr</span> | <%= @sessions.first&.current_discounted_price %> kr </h3>
+                <h3><i class="fas fa-tags"></i> <span class="original-price"><%= @sessions.first&.base_price %> kr</span> | <%= @sessions.first&.current_discounted_price.first %> kr </h3>
             </div>
           </div>
         </div>
       <% end %>
     </div>
   </div>
+
+  <div class="cinemas">
+    <h2>Cinemas</h2>
+    <div id="cinema-carousel">
+      <% @cinemas.each do |cinema| %>
+        <div class="home-cinema-card">
+          <%= link_to cinema_path(cinema) do %>
+             <%= cl_image_tag cinema.image %>
+          <% end %>
+          <div class="cinema-info">
+              <div class="cinema-info-text">
+                <h2><%= cinema.name %></h2>
+                <h5><%= cinema.address %></h5>
+              </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
+
