--- a/app/assets/stylesheets/components/_home-cinema-card.scss
+++ b/app/assets/stylesheets/components/_home-cinema-card.scss
@@ -19,7 +19,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 45%;
+  height: 50%;
   background: rgb(178,45,12);
   background: -moz-linear-gradient(0deg, rgba(178,45,12,1) 22%, rgba(178,45,12,1) 44%, rgba(178,45,12,0.7413340336134453) 64%, rgba(178,45,12,0.6516981792717087) 80%, rgba(178,45,12,0) 100%);
   background: -webkit-linear-gradient(0deg, rgba(178,45,12,1) 22%, rgba(178,45,12,1) 44%, rgba(178,45,12,0.7413340336134453) 64%, rgba(178,45,12,0.6516981792717087) 80%, rgba(178,45,12,0) 100%);
@@ -30,7 +30,7 @@
   // background: -webkit-linear-gradient(0deg, rgba(66,66,66,0.9794292717086834) 0%, rgba(66,66,66,0.9682247899159664) 41%, rgba(66,66,66,0.788953081232493) 64%, rgba(66,66,66,0.46682422969187676) 84%, rgba(66,66,66,0) 100%);
   // background: linear-gradient(0deg, rgba(66,66,66,0.9794292717086834) 0%, rgba(66,66,66,0.9682247899159664) 41%, rgba(66,66,66,0.788953081232493) 64%, rgba(66,66,66,0.46682422969187676) 84%, rgba(66,66,66,0) 100%);
     .cinema-info-text {
-      margin-top: 20px;
+      margin-top: 15px;
       margin-left: 10px;
       h5 {
       color: white;
@@ -40,6 +40,7 @@
       color: white;
       font-size: 18px;
       font-weight: 600;
+      text-shadow: 1px 1px $darkergrey;
       }
       h3 {
       color: white;
