--- a/app/assets/stylesheets/components/_home-movie-card.scss
+++ b/app/assets/stylesheets/components/_home-movie-card.scss
@@ -28,11 +28,15 @@
   left: 0px;
   top: 15px;
   text-align: center;
+
   .discount {
     margin-top: 15px;
-    color: white;
-    font-weight: bold;
-    opacity: 1;
+    h2 {
+      color: white;
+      font-weight: bold;
+      opacity: 1;
+      text-shadow: 1px 1px $darkgrey;
+    }
   }
 }
 
@@ -64,6 +68,7 @@
   color: white;
   font-size: 18px;
   font-weight: 600;
+  text-shadow: 1px 1px $darkergrey;
 }
 
 .poster-content-text h3 {
