--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,9 @@
              <%= cl_image_tag movie.image %>
           <% end %>
           <div class="discount-highlight">
-            <h2 class="discount"><%= @sessions.first&.current_discounted_price.second.to_i %>% off</h2>
+            <div class="discount">
+              <h2><%= @sessions.first&.current_discounted_price.second.to_i %>% off</h2>
+            </div>
           </div>
             <div class="poster-content">
               <div class="poster-content-text">
@@ -38,7 +40,7 @@
           <div class="cinema-info">
               <div class="cinema-info-text">
                 <h2><%= cinema.name %></h2>
-                <h5><%= cinema.address %></h5>
+                <h3><i class="fas fa-map-marker-alt"></i> <%= cinema.address %></h3>
               </div>
           </div>
         </div>
