--- a/app/views/cinemas/index.html.erb
+++ b/app/views/cinemas/index.html.erb
@@ -44,6 +44,7 @@
                 <i class="fas fa-calendar-alt"></i> Sessions
               <% end %>
             </div>
+            <div style="width: 10px;"></div>
             <div>
               <%= link_to cinema_map_path(cinema), class: 'browse-link' do %>
                 <i class="fas fa-map-marker-alt"></i> Map
