--- a/app/views/cinemas/show.html.erb
+++ b/app/views/cinemas/show.html.erb
@@ -1,7 +1,10 @@
 
 <div class="container sessions-index">
 <h2><%= @cinema.name %></h2>
-<p><%= @cinema.address %></p>
+<%= link_to cinema_map_path(@cinema) do %>
+   <h4><i class="fas fa-map-marker-alt"></i> <%= @cinema.address %></h4>
+<% end %>
+
 <div class="img-container">
 <%= cl_image_tag(@cinema.image) %>
 </div>
